--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "antd": "^5.4.6",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
